--- a/sub.html
+++ b/sub.html
@@ -38,7 +38,7 @@
                 <img class="img-shake" src="portfolio\img\profile.png" alt="自画像" />
               </p>
               <p class="main-visual-text">
-                いつもより多く揺れております
+                <p class="img-shake">いつもより多く揺れております<br>*変なものを服用してはいません</p>
               </p>
             </div>
             <!-- clearbox -->
