--- a/sub.html
+++ b/sub.html
@@ -38,7 +38,10 @@
                 <img class="img-shake" src="portfolio\img\profile.png" alt="自画像" />
               </p>
               <p class="main-visual-text">
-                <p class="img-shake">いつもより多く揺れております<br>*変なものを服用してはいません</p>
+                <p class="img-shake main-visual-text-sub">
+                  いつもより多く揺れております<br>
+                  *変な物を服用してはいません<br>
+                  *私はアル中でもありません</p>
               </p>
             </div>
             <!-- clearbox -->
