--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
       </header>
       <!-- /header -->
       <main class="content">
+
+        <!-- pos -->
+        <div class="pos">
+          <a href="#">
+              <img src="portfolio\img\mark_arrow_up.png" alt="topへ">
+          </a>
+        </div>
+        <!-- /pos -->
+
         <!-- main-visual -->
         <div class="main-visual" id="#">
           <div class="main-visual-inner">
