--- a/sub.html
+++ b/sub.html
@@ -55,7 +55,7 @@
             </div>
             <!-- clearbox -->
               <div class="clearbox">
-                <a href="" >よく見つけたね</a>
+                <a href="https://www.google.co.jp/" >よく見つけたね</a>
               </div>
             <!-- /clearbox -->
           </div>
